--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: circleci/python:3.8.2
     steps:
       - checkout
-      - restore_cahce:
+      - restore_cache:
           key: deps-{{ checksum "requirements.lock" }}
       - run:
           command: |
